--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,7 +116,8 @@
 		"overview": "Overview",
 		"rolesAndRights": "Roles and rights",
 		"website": "Website",
-		"organization": "Organization"
+		"organization": "Organization",
+		"notNow": "Not Now"
 	},
 	"NavItems": {
 		"register": "Register",
@@ -372,7 +373,18 @@
 		"creatingBadge": "Creating Badge",
 		"memberView": "Member view",
 		"partOfNetwork": "Part of the network",
-		"contract26": "By clicking on “Create institution,” the agreement <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/EN-Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>available here</a> pursuant to Article 26(1) GDPR on the joint data protection responsibility of the institution with its partners becomes effective."
+		"contract26": "By clicking on “Create institution,” the agreement <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/EN-Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>available here</a> pursuant to Article 26(1) GDPR on the joint data protection responsibility of the institution with its partners becomes effective.",
+		"linkedInId": "<span class=\"tw-italic tw-font-normal\">Optional: </span> LinkedIn-ID",
+		"linkedInIdUse1": "For ",
+		"linkedInIdUseLink": "badge display",
+		"linkedInIdUse2": " on LinkedIn",
+		"linkedInIdHint": "The LinkedIn ID is the sequence of numbers in the URL of your institution's page, for example: www.linkedin.com/company/<b>12345678</b>/admin -> ID <b>12345678</b>",
+		"linkedInUseNoteHeader": "LinkedIn ID of your institution",
+		"linkedInUseNoteText": "Learners can add badges they have earned to their LinkedIn profile. In order for the certificate to appear there with your institution's logo image, we need to store your institution's LinkedIn ID.",
+		"addLinkedInId": "Add LinkedIn ID",
+		"findLinkedInId": "How to find your LinkedIn ID:",
+		"findLinkedInIdText": "Go to your institution's page on LinkedIn. The ID is the sequence of numbers in the corresponding URL. For example, the URL is: www.linkedin.com/company/12345678/admin. → ID = 12345678.",
+		"findLinkedInIdNote": "You can add the LinkedIn ID at any time on your institution's page by editing the institution details."
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
@@ -796,7 +808,11 @@
 		"skillVisualisationHelp": "Move the mouse pointer over the circles to see the associated skills.",
 		"skillVisualisationSingleIntro": "Your skills in the area of ",
 		"FutureSkillsAccrodingToNextSkills": "Future Skills according to the NextSkills-Framework",
-		"ESCOAreas": "ESCO areas"
+		"ESCOAreas": "ESCO areas",
+		"shareViaLink": "Via Link:",
+		"addToLinkedInProfile": "Add badge to LinkedIn profile",
+		"shareViaLinkedIn": "On LinkedIn:",
+		"shareWithoutLinkedInId": "Info: The institution that awarded you the badge has not provided us with a LinkedIn ID. Therefore, the corresponding logo image cannot be displayed on LinkedIn."
 	},
 	"EditBadge": {
 		"editBadge": "Edit badge",
