--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -382,8 +382,11 @@
 		"networkBadges": "Netzwerk-Badges",
 		"yourIssuersAreInNetworks": "Institutionen von dir sind Teil folgender Netzwerke:",
 		"awardedNetworkBadges": "Diese Badges hat {{issuer}} über das jeweilige Netzwerk vergeben:",
+		"noAwardedNetworkBadges": "{{issuer}} hat noch keine Badges <span class='tw-underline'>über ein Netzwerk vergeben</span>.",
 		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk freigegeben:",
-		"badgeAwards": "Badge-Vergaben"
+		"noBadgesApprovedForNetworks": "{{ issuer }} hat noch keine Badges für die Nutzung im Netzwerk <span class='tw-underline'>freigegeben</span>.",
+		"badgeAwards": "Badge-Vergaben",
+		"partnerBadges": "Partner-Badges"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
