--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -357,7 +357,7 @@
 		"staffOwnerRights": "Zugriff auf alle Funktionen inkl. Hinzufügen/Entfernen von Editor:innen und Mitarbeiter:innen, Bearbeitung der Institutionsdetails sowie Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffEditorRights": "Rechte zum Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffMemberRights": "Kann die von Eigentümer:innen und/oder Editor:innen erstellten Badges vergeben (inkl. QR-Code-Vergaben erstellen, bearbeiten und löschen).",
-		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
+		"imageFormat": "(Format 1:1 / quadratisch)",
 		"nameOfIssuer": "Name der Institution",
 		"websiteUrl": "Webseiten-URL",
 		"schoolLabel": "Schule (Grundschulen, weiterführende Schulen, Berufsschulen, Institutionen formaler schulischer Bildung)",
