refactor: replace more 'micro degree' with 'learning path'

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -213,7 +213,6 @@
 		"createBadge": "Badge erstellen",
 		"createParticipationBadge": "Teilnahme-Badge erstellen",
 		"createCompetencyBadge": "Kompetenz-Badge erstellen",
-		"createLearningPath": "Micro Degree hochladen",
 		"contactInstitution": "Institution kontaktieren",
 		"jsonView": "JSON ansehen",
 		"viewOriginal": "Original ansehen",
@@ -254,7 +253,7 @@
 		"editInstitution": "Institution bearbeiten",
 		"editInstitutionInfo": "Bearbeite die Informationen dieser Institution.",
 		"issuerHasNoBadgesYet": "hat noch keine Badges.",
-		"issuerHasNoLearningPathYet": "hat noch keine Micro Degrees.",
+		"issuerHasNoLearningPathYet": "hat noch keine Lernpfade.",
 		"issuerHasBadges": "hat",
 		"myInstitutionsText": "Über deine Institutionen kannst du <span class='tw-font-medium'> Badges erstellen und anschließend an deine Lernenden vergeben</span>.",
 		"myLearningPathText": "Lernpfade werden im Zuge des Badge-Typs Micro Degree angelegt.",
@@ -265,7 +264,6 @@
 		"askForPlugin": "Plugin anfragen",
 		"askForPluginText": "Unser <span class='tw-font-bold'>Plugin</span> bietet dir die Möglichkeit, Badges aus deiner eigenen digitalen Lehrumgebung heraus zu vergeben.",
 		"betaPhase": "Unsere Plattform befindet sich noch in der Betaphase. <b>Du hast Fehler entdeckt? Schreib uns gerne an <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
-		"askForLearningPath": "Wir helfen dir, einen Micro Degree anzulegen. Schreibe an <a href='mailto:lernpfad@openbadges.education' class='tw-underline tw-text-[#1400FF]'>lernpfad@openbadges.education</a>.",
 		"award": "vergeben",
 		"badgePreview": "Vorschau Badge",
 		"certPreview": "Vorschau PDF-Zertifikat",
@@ -309,15 +307,6 @@
 			"hochschule": "Hochschule",
 			"andere": "andere"
 		},
-		"learningPathHeadline": "Micro Degree hochladen",
-		"uploadLearningPathText": "Wenn du versiert im Umgang mit JSON-Dateien bist, kannst du den Micro Degree auch selbst anlegen. So geht’s:",
-		"learningPathHelp": "Momentan werden Micro Degrees noch als JSON-Datei importiert. <b>Gerne erstellen wir diese Datei für dich</b>, schreibe einfach an <a class='tw-text-link tw-underline' href='mailto:lernpfad@openbadges.education'>lernpfad@openbadges.education</a>.",
-		"learningPathList1": "Lade unsere Datei-Vorlage herunter: <a download='BeispielPfad.json' class='tw-underline tw-text-[#1400FF]' href='./assets/testpfad.json'>Download JSON-Vorlage</a>",
-		"learningPathList2": "Öffne sie mit einem Texteditor.",
-		"learningPathList3": "Ersetze den Beispiel-Text durch die richtigen Badge-Angaben.",
-		"learningPathList4": "Exportiere die Vorlage als JSON-Datei.",
-		"learningPathList5": "Lade deine JSON-Datei hoch:",
-		"learningPathRecipient": "Absolvent:innen",
 		"learningPathParticipants": "Teilnehmer:innen",
 		"herebyIConfirm": "<ul>Hiermit bestätige ich, dass ich...<br><br>1. berechtigt bin, für die genannte Institution einen Account anzulegen sowie Badges zu erstellen und zu vergeben.<br><br> 2. die Verantwortung für die Qualität der Kursangebote, der erstellten und vergebenen Badges sowie für die zugeordneten Kompetenzen trage. <br> <br> 3. die Plattform nur für die vorgesehenen Zwecke nutze und jeglichen Missbrauch ablehne.</ul> ",
 		"entitled": "...berechtigt bin, für die genannte Institution einen Account anzulegen sowie Badges zu erstellen und zu vergeben.",
@@ -441,7 +430,6 @@
 		"multiRecipients": "Empfänger:innen",
 		"participation": "Teilnahme",
 		"competency": "Kompetenz",
-		"learningpath": "Micro Degree",
 		"title": "Badge-Titel",
 		"createdOn": "Erstellt am",
 		"catalogHeadline": "Alle Badges in der Übersicht",
@@ -482,7 +470,7 @@
 		"editCopyStatus": "Kopierstatus bearbeiten",
 		"award": "Badge direkt vergeben",
 		"awardQRCode": "Badge über QR-Code vergeben",
-		"partOfLearningPath": "Dieser Badge ist Teil folgender Micro Degrees:",
+		"partOfLearningPath": "Dieser Badge ist Teil folgender Lernpfade:",
 		"awardCriteria": "Vergabe-Kriterien",
 		"criteriaDesc": "Welche Anforderungen müssen deine Lernenden erfüllen, um den Badge zu erhalten?",
 		"activeParticipation": "Aktive Teilnahme",
@@ -1019,19 +1007,18 @@
 		"badgesAwardedSuccessfully": "Badges erfolgreich vergeben"
 	},
 	"LearningPath": {
-		"learningpaths": "Micro Degrees",
 		"learningpathsPlural": "Lernpfade",
-		"learningpathsNav": "Micro Degrees A-Z",
-		"catalogHeadline": "Alle Micro Degrees in der Übersicht",
+		"learningpathsNav": "Lernpfade A-Z",
+		"catalogHeadline": "Alle Lernpfade in der Übersicht",
 		"participate": "Teilnehmen",
 		"notParticipateAnymore": "Nicht mehr teilnehmen",
-		"searchLearningPaths": "Micro Degrees durchsuchen",
-		"lpFrom": "Micro Degree von",
+		"searchLearningPaths": "Lernpfade durchsuchen",
+		"lpFrom": "Lernpfad von",
 		"hours": "Stunden",
 		"successRequestPath": "Micro Degree-Badge erfolgreich angefragt!",
 		"desc": "Beschreibung",
 		"myProgress": "Mein Fortschritt",
-		"lpBadges": "Badges des Micro Degrees",
+		"lpBadges": "Badges des Lernpfades",
 		"lpBadgeRequests": "Micro Degree-Badge-Anfragen",
 		"lpRecipients": "Micro Degree-Empfänger:innen",
 		"lpActives": "Aktuell Lernende",
@@ -1049,22 +1036,19 @@
 		"badgeSequence": "Reihenfolge der Badges im Lernpfad",
 		"combineBadgeCategories": "Du kannst Kompetenz-Badges und Teilnahme-Badges kombinieren.",
 		"min2Badges": "Der Lernpfad muss mindestens 2 Badges enthalten.",
-		"chooseBadgesInfo": "Verwende am besten nur Badges deiner eigenen Institution, da der Micro Degree inaktiv wird, falls einer der enthaltenen Badges gelöscht werden sollte. Du musst dann einen Ersatz finden, um den Micro Degree wieder zu aktivieren.",
 		"youHave": "Du hast",
-		"choosenForLp": "für den Micro Degree ausgewählt.",
+		"choosenForLp": "für den Lernpfad ausgewählt.",
 		"dragDropInfo": "Mittels <span class='tw-font-bold'>Drag & Drop</span> kannst du deine ausgewählten Badges hier in die Reihenfolge bringen, in der sie innerhalb des Lernpfads angezeigt werden sollen.",
-		"lpParticipationBadge": "Micro Degree",
-		"lpParticipationBadgeInfo": "Lernende können den Micro Degree-Badge bei dir anfordern, sobald sie alle im Micro Degree enthaltenen Badges erworben haben. <span class='tw-font-bold'>Du erhältst die Anfragen per E-Mail </span>.",
 		"lpDerivedData": "Folgende Daten haben wir übernommen:",
 		"addTag": "Tag hinzufügen",
-		"createdSuccessfully": "Dein Micro Degree wurde erfolgreich erstellt.",
+		"createdSuccessfully": "Dein Lernpfad wurde erfolgreich erstellt.",
 		"savedSuccessfully": "Deine Änderungen wurden erfolgreich gespeichert",
-		"title": "Micro Degree-Titel",
+		"title": "Lernpfad-Titel",
 		"description": "Kurz-Beschreibung für Lernende",
 		"shortDescription": "Kurz-Beschreibung",
-		"selectedBadges": "Du hast {{ count }} Badges für den Micro Degree ausgewählt",
-		"selectedBadgesOne": "Du hast 1 Badge für den Micro Degree ausgewählt",
-		"deleteWarning": "Möchtest du diesen Micro Degree wirklich löschen?",
+		"selectedBadges": "Du hast {{ count }} Badges für den Lernpfad ausgewählt",
+		"selectedBadgesOne": "Du hast 1 Badge für den Lernpfad ausgewählt",
+		"deleteWarning": "Möchtest du diesen Lernpfad wirklich löschen?",
 		"lastBadgeInfo": "Den Abschluss-Badge <strong class='tw-text-purple'>Micro Degree</strong> erhalten Lernende automatisiert per E-Mail, sobald sie alle im Lernpfad enthaltenen Badges erworben haben.",
 		"activateMd": "Lernpfad freischalten",
 		"activationInfo": "Wenn du den Lernpfad zur Nutzung freischaltest, <span class='tw-font-bold'>kannst du ihn danach nicht mehr bearbeiten</span>. ",
@@ -1074,7 +1058,7 @@
 		"notActivatedYetLink": "freigeschaltet",
 		"notActivatedYetEnd": ".",
 		"finishedOn": "Abgeschlossen am",
-		"mdUsers": "Micro Degree-Nutzende",
+		"mdUsers": "Lernpfad-Nutzende",
 		"searchMds": "Lernpfade durchsuchen",
 		"saving": "Speichere",
 		"flexibleSelection": "Auswahl für flexiblen Lernpfad",
