--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -212,7 +212,6 @@
 		"createBadge": "Create badge",
 		"createParticipationBadge": "Create participation badge",
 		"createCompetencyBadge": "Create competency badge",
-		"createLearningPath": "Upload Micro Degree",
 		"contactInstitution": "Contact institution",
 		"jsonView": "View JSON",
 		"viewOriginal": "View original",
@@ -253,7 +252,7 @@
 		"editInstitution": "Edit institution",
 		"editInstitutionInfo": "Edit the information of this institution.",
 		"issuerHasNoBadgesYet": "has no badges yet.",
-		"issuerHasNoLearningPathYet": "has no Micro Degrees yet.",
+		"issuerHasNoLearningPathYet": "has no learning paths yet.",
 		"issuerHasBadges": "has",
 		"myInstitutionsText": "Through your institutions, you can <span class='tw-font-medium'>create badges and then award them to your learners</span>.",
 		"myLearningPathText": "Learning paths are created as part of the Micro Degree badge type.",
@@ -264,7 +263,6 @@
 		"askForPlugin": "Request plugin",
 		"askForPluginText": "Our <span class='tw-font-bold'>plugin</span> offers you the possibility to award badges from your own digital learning environment.",
 		"betaPhase": "Our platform is still in the beta phase. <b>Did you discover any errors? Write to us at <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
-		"askForLearningPath": "We'll help you create a Micro Degree. Write to <a href='mailto:lernpfad@openbadges.education' class='tw-underline tw-text-[#1400FF]'>lernpfad@openbadges.education</a>.",
 		"award": "award",
 		"badgePreview": "Badge preview",
 		"certPreview": "PDF certificate preview",
@@ -308,15 +306,6 @@
 			"hochschule": "College",
 			"andere": "Others"
 		},
-		"learningPathHeadline": "Upload Micro Degree",
-		"uploadLearningPathText": "If you are familiar with JSON files, you can also create the Micro Degree yourself. Here's how:",
-		"learningPathHelp": "Currently, Micro Degrees are imported as JSON files. <b>We would be happy to create this file for you</b>, just write to <a class='tw-text-link tw-underline' href='mailto:lernpfad@openbadges.education'>lernpfad@openbadges.education</a>.",
-		"learningPathList1": "Download our file template: <a download='BeispielPfad.json' class='tw-underline tw-text-[#1400FF]' href='./assets/testpfad.json'>Download JSON template</a>",
-		"learningPathList2": "Open it with a text editor.",
-		"learningPathList3": "Replace the example text with the correct badge information.",
-		"learningPathList4": "Export the template as a JSON file.",
-		"learningPathList5": "Upload your JSON file:",
-		"learningPathRecipient": "Graduates",
 		"learningPathParticipants": "Participants",
 		"herebyIConfirm": "<ul>I hereby confirm that I... <br><br>1. am authorized to create an account for the named institution and to create and award badges. <br><br>2. am responsible for the quality of the courses offered, the badges created and awarded and for the competences assigned.<br><br> 3. use the platform only for the intended purposes and reject any misuse.</ul>",
 		"entitled": "...am authorized to create an account for the aforementioned institution and to create and award badges.",
@@ -438,7 +427,6 @@
 		"multiRecipients": "recipients",
 		"participation": "Participation",
 		"competency": "Competency",
-		"learningpath": "Micro Degree",
 		"title": "Badge title",
 		"createdOn": "Created on",
 		"catalogHeadline": "All badges at a glance",
@@ -477,7 +465,7 @@
 		"editCopyStatus": "Edit copy status",
 		"award": "Award Badge",
 		"awardQRCode": "Award Badge using QR Code",
-		"partOfLearningPath": "This Badge is part of the following Micro Degrees:",
+		"partOfLearningPath": "This Badge is part of the following learning paths:",
 		"awardCriteria": "Award Criteria",
 		"criteriaDesc": "What requirements should your learners meet to receive the badge?",
 		"activeParticipation": "Active Participation",
@@ -1017,19 +1005,18 @@
 		"badgesAwardedSuccessfully": "badges awarded successfully"
 	},
 	"LearningPath": {
-		"learningpaths": "Micro Degrees",
 		"learningpathsPlural": "learning paths",
-		"learningpathsNav": "Micro Degrees A-Z",
-		"catalogHeadline": "All Micro Degrees at a glance",
+		"learningpathsNav": "Learning Paths A-Z",
+		"catalogHeadline": "All learning paths at a glance",
 		"participate": "Participate",
 		"notParticipateAnymore": "No longer participate",
-		"searchLearningPaths": "Search Micro Degrees",
-		"lpFrom": "Micro Degree by",
+		"searchLearningPaths": "Search learning paths",
+		"lpFrom": "Learning path by",
 		"hours": "Hours",
 		"successRequestPath": "Micro Degree badge requested successfully!",
 		"desc": "Description",
 		"myProgress": "My progress",
-		"lpBadges": "Badges of the Micro Degree",
+		"lpBadges": "Badges of the Learning Path",
 		"lpBadgeRequests": "Micro Degree badge requests",
 		"lpRecipients": "Micro Degree recipients",
 		"lpActives": "Currently learning",
@@ -1047,22 +1034,19 @@
 		"badgeSequence": "Order of badges in the learning path",
 		"combineBadgeCategories": "You can combine competency badges and participation badges.",
 		"min2Badges": "The learning path must contain at least 2 badges.",
-		"chooseBadgesInfo": "It is best to only use badges from your own institution, as the Micro Degree will become inactive if one of the included badges is deleted. You will then have to find a replacement to reactivate the Micro Degree.",
 		"youHave": "You have",
-		"choosenForLp": "selected for the Micro Degree.",
+		"choosenForLp": "selected for the learning path.",
 		"dragDropInfo": "You can use <span class='tw-font-bold'>drag & drop</span> to arrange your selected badges here in the order they should appear within the learning path.",
-		"lpParticipationBadge": "Micro Degree",
-		"lpParticipationBadgeInfo": "Learners can request the Micro Degree badge from you as soon as they have acquired all the badges included in the Micro Degree. <span class='tw-font-bold'>You will receive the requests by email</span>.",
 		"lpDerivedData": "We have adopted the following data:",
 		"addTag": "Add tag",
-		"createdSuccessfully": "Your Micro Degree has been created successfully.",
+		"createdSuccessfully": "Your learning path has been created successfully.",
 		"savedSuccessfully": "Your changes have been saved successfully",
-		"title": "Micro Degree title",
+		"title": "Learning path title",
 		"description": "Short description for learners",
 		"shortDescription": "Short description",
-		"selectedBadges": "You selected {{ count }} Badges for the Micro Degree",
-		"selectedBadgesOne": "You selected 1 Badge for the Micro Degree",
-		"deleteWarning": "Do you really want to delete this Micro Degree?",
+		"selectedBadges": "You selected {{ count }} Badges for the learning path",
+		"selectedBadgesOne": "You selected 1 Badge for the learning path",
+		"deleteWarning": "Do you really want to delete this learning path?",
 		"lastBadgeInfo": "Learners automatically receive the <strong class='tw-text-purple'>Micro Degree</strong> badge by e-mail, as soon as they have earned all badges in the learning path.",
 		"activateMd": "Unlock learning path",
 		"activationInfo": "When you activate the learning path for use, <span class='tw-font-bold'>you can no longer edit it afterwards</span>. ",
@@ -1072,7 +1056,7 @@
 		"notActivatedYetLink": "unlocked",
 		"notActivatedYetEnd": " for use.",
 		"finishedOn": "Finished on",
-		"mdUsers": "Micro Degree users",
+		"mdUsers": "Learning path users",
 		"searchMds": "search learning paths",
 		"saving": "Saving",
 		"flexibleSelection": "Selection for flexible learning path",
