--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -354,10 +354,10 @@
 		"revokeSuccess": "Badge von {{ recipient}} zurücknehmen",
 		"revokeError": "Widerrufen des Badges von {{ recipient }} fehlgeschlagen",
 		"searchIssuer": "Institution suchen",
+		"searchNetwork": "Netzwerk suchen",
 		"staffOwnerRights": "Zugriff auf alle Funktionen inkl. Hinzufügen/Entfernen von Editor:innen und Mitarbeiter:innen, Bearbeitung der Institutionsdetails sowie Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffEditorRights": "Rechte zum Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffMemberRights": "Kann die von Eigentümer:innen und/oder Editor:innen erstellten Badges vergeben (inkl. QR-Code-Vergaben erstellen, bearbeiten und löschen).",
-		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
 		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
 		"nameOfIssuer": "Name der Institution",
 		"websiteUrl": "Webseiten-URL",
@@ -385,7 +385,7 @@
 		"linkedInUseNoteText": "Lernende können erhaltene Badges in ihr LinkedIn-Profil einbinden. Damit das Zertifikat dort mit dem \t\t\tLogo-Bild deiner Institution erscheint, müssen wir die LinkedIn-ID deiner Institution hinterlegen.",
 		"addLinkedInId": "LinkedIn-ID ergänzen",
 		"findLinkedInId": "So findest du die LinkedIn-ID:",
-		"findLinkedInIdText": "Gehe zur Seite deiner Institution auf LinkedIn.  Die ID ist die Zahlenfolge in der entsprechenden URL.  Die URL lautet zum Beispiel: www.linkedin.com/company/12345678/admin. → ID = 12345678.",
+		"findLinkedInIdText": "Gehe zur Seite deiner Institution auf LinkedIn.  Die ID ist die Zahlenfolge in der entsprechenden URL. Die URL lautet zum Beispiel: www.linkedin.com/company/12345678/admin. → ID = 12345678.",
 		"findLinkedInIdNote": "Du kannst die Linkedin-ID jederzeit auf der Seite deiner Institution durch „Bearbeiten” der Institutions-Details ergänzen.",
 		"issueByEmail": "per E-Mail vergeben",
 		"recipientEmail": "E-Mail-Adresse Empfänger:in",
@@ -397,7 +397,7 @@
 		"yourIssuersAreInNetworks": "Institutionen von dir sind Teil folgender Netzwerke:",
 		"awardedNetworkBadges": "Diese Badges hat {{issuer}} <span class='tw-underline'>über das jeweilige Netzwerk vergeben</span>:",
 		"noAwardedNetworkBadges": "{{issuer}} hat noch keine Badges <span class='tw-underline'>über ein Netzwerk vergeben</span>.",
-		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk freigegeben:",
+		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk <span class='tw-underline'>freigegeben</span>:",
 		"noBadgesApprovedForNetworks": "{{ issuer }} hat noch keine Badges für die Nutzung im Netzwerk <span class='tw-underline'>freigegeben</span>.",
 		"badgeAwards": "Badge-Vergaben",
 		"partnerBadges": "Partner-Badges"
@@ -450,7 +450,9 @@
 		"networkBadges": "Netzwerk-Badges",
 		"noPartnerBadgesYet": "Bisher hat keine Partner-Institution einen Badge für das Netzwerk freigegeben.",
 		"createdByNetwork": "Erstellt vom NETZWERK",
-		"noBadgesYet": "Das Netzwerk <span class='tw-font-semibold'>{{network}}</span> hat noch keine eigenen Badges erstellt."
+		"noBadgesYet": "Das Netzwerk <span class='tw-font-semibold'>{{network}}</span> hat noch keine eigenen Badges erstellt.",
+		"sharedBy": "Freigegeben von",
+		"sharedOn": "Freigegeben am"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
@@ -539,7 +541,13 @@
 		"standard-info-30": "Seit Juni 2025 werden alle Badges auf OEB im neuen, zukunfts-sicheren 3.0-Standard erstellt. Weitere Infos dazu findest du in unseren <a class='tw-underline' href='/public/faq'>FAQ</a>.",
 		"awardingInProgress": "Badge-Vergabe läuft",
 		"willBeAwardedSoon": "Gleich haben wir alle Badges verschickt!",
-		"catalogAllLoaded": "Alle Badges, die deinen Suchkriterien entsprechen, wurden geladen."
+		"catalogAllLoaded": "Alle Badges, die deinen Suchkriterien entsprechen, wurden geladen.",
+		"shareOnNetwork": "Für Netzwerk freigeben",
+		"shareOnWhichNetwork": "Für welches deiner Netzwerke soll der Badge freigegeben werden?",
+		"allNetworkMembersGetBadge": "Alle Mitglieder des gewählten Netzwerks können den Badge über ihre Institution vergeben.",
+		"networkAssertionsGetTracked": "Alle Vergaben des Badges fliessen in die Daten-Auswertung des Netzwerks ein.",
+		"cantRemoveFromNetwork": "Der Badge kann NICHT wieder aus dem Netzwerk entfernt werden.",
+		"shareBadgeOnNetwork": "Badge für Netzwerk freigeben"
 	},
 	"CreateBadge": {
 		"chooseBadgeCategory": "Kategorie wählen",
