--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -450,6 +450,7 @@
 		"networkBadges": "Netzwerk-Badges",
 		"noPartnerBadgesYet": "Bisher hat keine Partner-Institution einen Badge für das Netzwerk freigegeben.",
 		"createdByNetwork": "Erstellt vom NETZWERK",
+		"partOfNetwork": "Teil vom NETZWERK",
 		"noBadgesYet": "Das Netzwerk <span class='tw-font-semibold'>{{network}}</span> hat noch keine eigenen Badges erstellt.",
 		"sharedBy": "Freigegeben von",
 		"sharedOn": "Freigegeben am"
